--- a/public/style.css
+++ b/public/style.css
@@ -13,13 +13,17 @@
   position: fixed;
   top: 0;
   width: 100%;
-  background-color: #34495e;
+  background-color: #00ff00;
   z-index: 9999;
 }
 .navbar-burger {
-  color: white;
+  color: rgba(255, 0, 0, 0.3);
 }
 
 #navbarMenuHeroB {
-  background-color: #34495e;
+  background-color: black;
+}
+
+#home {
+  background-color: black;
 }
